--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <div id="gameboy-container">
-        <!-- Loading Screen -->
         <div id="loading-screen" class="screen active">
             <div class="gameboy-screen">
                 <div class="screen-content">
@@ -16,13 +15,12 @@
                     <div class="loading-text">&gt; INITIALIZING..._</div>
                     <div class="progress-bar">
                         <div class="progress-fill" id="progress-fill"></div>
-                        <div class="progress-text">38%</div>
+                        <div class="progress-text">0%</div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- Main Screen -->
         <div id="main-screen" class="screen">
             <div class="gameboy-body">
                 <div class="gameboy-header">
@@ -35,14 +33,16 @@
                 
                 <div class="gameboy-screen">
                     <div class="screen-content">
-                        <h1 class="birthday-title">ANNIVERSARY!</h1>
-                        <div class="start-text">Press Start Button</div>
+                        <h1 class="birthday-title">1 YEAR!</h1>
+                        <div class="love-counter">
+                            <p class="counter-label">KITA SUDAH BERSAMA:</p>
+                            <div id="days-count" class="days-count">0 Hari</div>
+                        </div>
+                        
+                        <div class="start-text">Press Start</div>
                         <div class="screen-info">
-                            <span class="dot-matrix">DOT MATRIX WITH STEREO SOUND</span>
-                            <span class="battery">
-                                <span class="battery-dot"></span>
-                                BATTERY
-                            </span>
+                            <span class="dot-matrix">WITH LOVE</span>
+                            <span class="battery"><span class="battery-dot"></span>BATT</span>
                         </div>
                     </div>
                 </div>
@@ -53,7 +53,9 @@
                     <button class="menu-btn music-btn" data-page="music">MUSIC</button>
                     <button class="menu-btn tetris-btn" data-page="tetris">TETRIS</button>
                 </div>
-
+                <div class="special-gift" onclick="window.location.href='bunga.html'">
+    🌸
+</div>
                 <div class="controls">
                     <div class="dpad">
                         <div class="dpad-center">
@@ -73,57 +75,46 @@
                     <button class="control-btn select-btn">SELECT</button>
                     <button class="control-btn start-btn">START</button>
                 </div>
-
                 <div class="speaker-grille"></div>
             </div>
         </div>
 
-        <!-- Message Screen -->
         <div id="message-screen" class="screen">
             <div class="page-container">
-                <div class="page-screen">
-                        <!-- Content will be populated by JavaScript -->
-                </div>
+                <div class="page-screen"></div>
                 <div class="page-controls">
                     <button class="page-btn back-btn" data-page="main">KEMBALI</button>
-                    <button class="page-btn continue-btn">SELANJUTNYA</button>
+                    <button class="page-btn continue-btn">LANJUT</button>
                 </div>
             </div>
         </div>
 
-        <!-- Gallery Screen -->
         <div id="gallery-screen" class="screen">
             <div class="page-container">
                 <div class="page-screen">
                     <div class="page-header">Gallery</div>
-                    <div class="gallery-content">
-                        <!-- Content will be populated by JavaScript -->
-                    </div>
+                    <div class="gallery-content"></div>
                 </div>
                 <div class="page-controls">
                     <button class="page-btn back-btn" data-page="main">KEMBALI</button>
-                    <button class="page-btn continue-btn">SELANJUTNYA</button>
+                    <button class="page-btn continue-btn">LANJUT</button>
                 </div>
             </div>
         </div>
 
-        <!-- Music Screen -->
         <div id="music-screen" class="screen">
             <div class="page-container">
                 <div class="page-screen">
                     <div class="page-header">Music Player</div>
-                    <div class="music-content">
-                        <!-- Content will be populated by JavaScript -->
-                    </div>
+                    <div class="music-content"></div>
                 </div>
                 <div class="page-controls">
                     <button class="page-btn back-btn" data-page="main">KEMBALI</button>
-                    <button class="page-btn continue-btn">SELANJUTNYA</button>
+                    <button class="page-btn continue-btn">LANJUT</button>
                 </div>
             </div>
         </div>
 
-        <!-- Tetris Screen -->
         <div id="tetris-screen" class="screen">
             <div class="page-container">
                 <div class="page-screen">
@@ -131,16 +122,14 @@
                         <div class="tetris-title">Tetris</div>
                         <div class="tetris-stats">
                             <div class="stat">Score: <span id="score">0</span></div>
-                            <div class="stat">Level: <span id="level">1</span></div>
-                            <div class="stat">Lines: <span id="lines">0</span></div>
                         </div>
                     </div>
                     <div class="tetris-game">
-                        <canvas id="tetris-canvas" width="300" height="400"></canvas>
+                        <canvas id="tetris-canvas"></canvas>
                     </div>
                     <div class="tetris-controls">
                         <button class="tetris-btn" id="left-btn">◀</button>
-                        <button class="tetris-btn" id="rotate-btn">ROTATE</button>
+                        <button class="tetris-btn" id="rotate-btn">ROT</button>
                         <button class="tetris-btn" id="right-btn">▶</button>
                     </div>
                 </div>
@@ -150,7 +139,6 @@
             </div>
         </div>
 
-        <!-- Game Over Modal -->
         <div id="game-over-modal" class="modal">
             <div class="modal-content">
                 <div class="game-over-text">GAME OVER</div>
@@ -158,22 +146,18 @@
             </div>
         </div>
 
-        <!-- Final Message Modal -->
         <div id="final-message-modal" class="modal">
             <div class="modal-content">
-                <div class="final-message-title">INGET YA!</div>
+                <div class="final-message-title">UNTUK KAMU ❤️</div>
                 <div class="final-message-text">
-                    <p>walaupun kamu kalah,</p>
-                    <p>tapi tetap ko menang di hatiku anjay, HEHE</p>
-                    <p>^_^</p>
-                    <p class="love-text">I LOVE YOU &lt;3</p>
+                    <p>Walaupun kalah ko di game,</p>
+                    <p>tetap ko pemenang di hatiku cahhh!</p>
+                    <p class="love-text">I LOVE YOU FOREVER ❤️</p>
                 </div>
                 <button class="modal-btn" id="ok-btn">OK</button>
             </div>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
-
