Add Google Fonts link to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1 TAHUN BERSAMA ANDILLL</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="gameboy-container">
@@ -37,6 +38,7 @@
                         <div class="love-counter">
                             <p class="counter-label">KITA SUDAH BERSAMA:</p>
                             <div id="days-count" class="days-count">0 Hari</div>
+                            <div id="night-message" class="night-only-text"></div>
                         </div>
                         
                         <div class="start-text">Press Start</div>
