--- a/flower.html
+++ b/flower.html
@@ -10,10 +10,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 </head>
 <button onclick="window.location.href='index.html'" 
-        style="position: fixed; bottom: 5vmin; right: 5vmin; z-index: 1000; 
-               padding: 2vmin 4vmin; border-radius: 20px; border: none; 
-               background: #ff4d6d; color: white; cursor: pointer; 
-               font-family: 'Poppins', sans-serif; font-size: 3vmin;">
+        style="position: fixed; 
+               bottom: 5vh; /* Menggunakan vh agar jaraknya selalu 5% dari bawah layar HP */
+               right: 5vw;  /* Menggunakan vw agar jaraknya selalu 5% dari samping kanan HP */
+               z-index: 99999; /* Z-index sangat tinggi agar tidak tertutup rumput */
+               padding: 12px 20px; 
+               border-radius: 30px; 
+               border: none; 
+               background: #ff4d6d; 
+               color: white; 
+               cursor: pointer; 
+               font-family: 'Poppins', sans-serif;
+               font-size: 12px;
+               font-weight: bold;
+               box-shadow: 0 4px 15px rgba(0,0,0,0.3); /* Tambah bayangan agar tombol 'melayang' */
+               display: block !important; /* Memastikan tombol tidak tersembunyi */
+               ">
     KEMBALI KE GAMEBOY
 </button>
 <body class="container">
